# epsilab-python

./: .aiderignore  .cursorignore  .cursorindexingignore  .env.example  .gitignore  README.md  pyproject.toml
.github/workflows/: workflow.yml
docs/: api-reference.md  evaluations.md
epsilab/: __init__.py  _prompt.py  agent_runner.py  cli.py  client.py  exceptions.py  models.py
examples/: _environment_utils.py  batch_evaluation.py  example.py  grpo_training.py  marketplace_example.py  run_environment.py  run_long_horizon_agent.py
tests/: test_cli.py  test_client.py  test_examples.py  test_models.py
