[build-system]
requires = ["hatchling>=1.18"]
build-backend = "hatchling.build"

[project]
name = "epsilab"
version = "0.17.18"
description = "Python SDK and CLI for the Epsilab RL Environment Hub and Marketplace."
readme = "README.md"
license = { file = "LICENSE" }
authors = [ { name = "Epsilab" } ]
requires-python = ">=3.9"
dependencies = [
  "httpx>=0.27.0",
  "python-dotenv>=1.0.1",
]
keywords = ["ai", "evaluation", "llm", "fine-tuning", "training-data", "rl-environments", "marketplace"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "License :: OSI Approved :: Apache Software License",
  "Operating System :: OS Independent",
  "Typing :: Typed",
]

[project.optional-dependencies]
training = [
  "trl>=1.0",
  "transformers>=4.45",
  "datasets>=4.0",
  "torch>=2.0",
  "together>=2.0",
]
tinker = [
  "tinker",
  "tinker-cookbook",
  "numpy",
]
fireworks = [
  "fireworks-ai[training]",
]
all = [
  "epsilab[training]",
  "epsilab[tinker]",
  "epsilab[fireworks]",
]

[project.scripts]
epsilab = "epsilab.cli:main"

[project.urls]
Homepage = "https://www.epsilab.com"
Documentation = "https://docs.epsilab.com"
Source = "https://github.com/EpsilabAI/epsilab-python"
Issues = "https://github.com/EpsilabAI/epsilab-python/issues"

[tool.hatch.build]
include = [
  "epsilab/**",
  "README.md",
  "LICENSE",
  "examples/**",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
